# sb_auth

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
sb_auth/: exec.py  rw_comm_lang.py  sb_client.py  sb_local.py  sb_op.py  sb_serve.py  usr_table.py
sb_auth/user_data/: default_user_permissions.txt  f3.txt  user_dir
