[project]
name = "sb_auth"
version = "0.0.10"
dependencies = [
"numpy>=1.22.1",
"matplotlib>=3.5.3",
"scipy>=1.14.1",
"morebs2>=0.1.94",
"python-resources>=0.3",
"seqbuild>=0.0.72",
]
authors = [
  { name="Richard Pham", email="phamrichard45@gmail.com" },
]
description = 'An implementation of a WebSocket authentication scheme, unsecured ws://'
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sb_auth*"]

[tool.setuptools.package-data]
"seqbuild.face.sample_script" = ["*"]

[project.urls]
Homepage = "https://github.com/changissnz/sb_auth"
Issues = "https://github.com/changissnz/sb_auth/issues"

